# ConsoleSnake

./: .gitignore  CMakeLists.txt  main.cpp
headers/: Point.h
source/: Point.cpp  Point.h  Snake.cpp  Snake.h  main.cpp
